# Path-Tracer

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CheckAvxSupport.cmake
scenes/: cornell.json
src/: BRDF.h  BSDF.h  BVH.cpp  BVH.h  BoundingBox.h  Bounds3.h  CMJSampler.cpp  CMJSampler.h  Camera.cpp  Camera.h  ColorUtils.h  Film.cpp  Film.h  HashUtils.h  Material.cpp  Material.h  MathUtils.h  Matrix4x4.h  OrthonormalBasis.h  Plane.cpp  Plane.h  ProgressBar.cpp  ProgressBar.h  RandomSampler.cpp  RandomSampler.h  RandomSeries.h  Ray.h  Renderer.cpp  Renderer.h  Sampler.h  Scene.cpp  Scene.h  SceneFileParser.cpp  SceneFileParser.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  VecMath.h  (+4 more)
src/math/: Color.h  Constants.h  Functions.h  Vector3.h
tests/: BsdfTests.cpp  BxdfTests.cpp  HelperTests.cpp  Helpers.h  MathTests.cpp  RngTests.cpp  SamplerTests.cpp  SamplingTests.cpp  ShapeTests.cpp  TestHelpers.h
